@@ -209,7 +209,7 @@ bool HybridModel::Build(const OPCODECREATE& create)
 				Data->mLeaves[Data->mNbLeaves] = *current->GetAABB();
 
 				// Setup leaf data
-				udword Index = (udword(current->GetPrimitives()) - udword(Data->mBase))/sizeof(udword);
+				udword Index = (size_t(current->GetPrimitives()) - size_t(Data->mBase))/sizeof(udword);
 				Data->mTriangles[Data->mNbLeaves].SetData(current->GetNbPrimitives(), Index);
 
 				Data->mNbLeaves++;
