@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+04/05/05 tfautre
+
+	* Fixed segmentation fault with OPCODE on 64 bits systems.
+
 03/31/05 tfautre
 
 	* Fixed timer.cpp compiler error on x86-64 using GCC.
